// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaDropzone 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer default"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone while uploading 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer default"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="progressbar"
  >
    <div
      style="width:200px;height:200px"
    >
      <svg
        class="root  "
        viewBox="0 0 100 100"
      >
        <circle
          class="background"
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="
      M 50,50 m 0,-38
      a 38,38 0 1 1 0,76
      a 38,38 0 1 1 0,-76
    "
          fill-opacity="0"
          stroke-width="8"
        />
        <path
          class="path"
          d="
      M 50,50 m 0,-38
      a 38,38 0 1 1 0,76
      a 38,38 0 1 1 0,-76
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke-dasharray:238.76104167282426px 238.76104167282426px;stroke-dashoffset:119.38052083641213px"
        />
        <text
          class="text"
          x="50"
          y="50"
        >
          50%
        </text>
      </svg>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with the default empty icon 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer default"
>
  <div
    class="emptyIndicator"
  >
    <span
      aria-label="su-image"
      class="su-image"
    />
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with the passed empty icon 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer default"
>
  <div
    class="emptyIndicator"
  >
    <span
      aria-label="su-user"
      class="su-user"
    />
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with the round skin 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer round"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;
